# openenv_hackathon

./: .env.example  .gitignore  Dockerfile  README.md  __init__.py  app.py  benchmark_models.py  benchmark_results.md  client.py  environment.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  validate-submission.sh
benchmark_logs/: anthropic_claude-3.5-haiku.txt  google_gemma-2-9b-it.txt  openai_gpt-4o-mini.txt
server/: ad_moderation_environment.py  app.py
tasks/: __init__.py  definitions.py  graders.py
