[project]
name = "ad-integrity-openenv"
version = "0.1.0"
description = "Ad Integrity content moderation RL environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "openai>=1.20.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[tool.uv]
package = false
dev-dependencies = []